# code-atlas

./: .atlasignore  .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  agent.md  atlas.toml  docker-compose.yml  pyproject.toml  ruff.toml
.claude/commands/: dream-mode.md
.claude/rules/: knowledge.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  labels.yml  release.yml  security.yml
crates/: Cargo.toml
crates/atlas-parser/: Cargo.toml
crates/atlas-parser/src/: main.rs
docs/: SCHEMA.md  architecture.md  benchmarks.md  landscape.md
docs/adr/: 0000-template.md  0001-memgraph-as-database.md  0002-build-from-scratch.md  0003-python-rust-hybrid.md  0004-event-driven-tiered-pipeline.md  0005-deployment-process-model.md  0006-pure-python-tree-sitter.md  0007-qualified-name-strategy.md  0008-cross-file-relationship-resolution.md  0009-event-pipeline-durability-contract.md  0010-integration-test-isolation.md  0011-note-vault-schema.md  README.md
docs/guides/: adding-languages.md  configuration.md  repo-guidelines.md  usage.md
scripts/: profile_index.py  profile_query.py
src/code_atlas/: __init__.py  cli.py  detectors.py  dream.py  embeddings.py  events.py  graph.py  health.py  indexer.py  mcp_server.py  parser.py  pipeline.py  schema.py  search.py  settings.py  subagent.py  telemetry.py  watcher.py
src/code_atlas/graph/: __init__.py  client.py
src/code_atlas/indexing/: __init__.py  consumers.py  daemon.py  orchestrator.py  watcher.py
src/code_atlas/parsing/: __init__.py  ast.py  detectors.py
src/code_atlas/parsing/languages/: __init__.py  cpp.py  go.py  jvm.py  markdown.py  php.py  python.py  ruby.py  rust.py  typescript.py
src/code_atlas/search/: __init__.py  embeddings.py  engine.py  guidance.py
src/code_atlas/server/: __init__.py  analysis.py  health.py  mcp.py
tests/: conftest.py  test_cli.py  test_detectors.py  test_embeddings.py  test_graph.py  test_health.py  test_indexer.py  test_mcp_server.py  test_monorepo.py  test_parser.py  test_parser_cpp.py  test_parser_ruby.py  test_pipeline.py  test_schema.py  test_search.py  test_subagent.py  test_telemetry.py  test_watcher.py
tests/bench/: conftest.py  test_bench_concurrent.py  test_bench_indexing.py  test_bench_memory.py  test_bench_parser.py  test_bench_query.py
tests/integration/: conftest.py  test_dream.py  test_infra_isolation.py
tests/integration/graph/: test_client.py
tests/integration/indexing/: test_consumers.py  test_daemon.py  test_live_update.py  test_monorepo.py  test_orchestrator.py  test_watcher.py
tests/integration/search/: test_embeddings.py  test_engine.py
tests/integration/server/: test_mcp.py
tests/unit/: conftest.py  test_cli.py  test_dream.py  test_events.py  test_schema.py  test_settings.py
tests/unit/graph/: test_client.py
tests/unit/indexing/: test_consumers.py  test_daemon.py  test_monorepo.py  test_orchestrator.py  test_watcher.py
tests/unit/parsing/: test_ast.py  test_cpp.py  test_go.py  test_jvm.py  test_languages_init.py  test_markdown.py  test_php.py  test_python.py  test_ruby.py  test_rust.py  test_typescript.py
tests/unit/search/: test_embeddings.py  test_engine.py  test_guidance.py
tests/unit/server/: test_analysis.py  test_health.py  test_mcp.py
