[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-atlas-mcp"
version = "0.2.0"
description = "A code intelligence graph that gives AI coding agents deep, token-efficient understanding of your codebase."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
authors = [
    { name = "SerPeter" },
]
keywords = [
    "code-intelligence",
    "graph-database",
    "mcp",
    "rag",
    "code-search",
    "ai-agents",
    "memgraph",
    "ast",
    "code-graph",
    "tree-sitter",
    "semantic-search",
    "code-navigation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer~=0.21",
    "loguru~=0.7",
    "pydantic~=2.12",
    "pydantic-settings~=2.12",
    "mcp~=1.26",
    "neo4j~=6.1",            # Bolt protocol driver (works with Memgraph)
    "litellm~=1.81",
    "tree-sitter~=0.25",
    "tree-sitter-python~=0.23",
    "tree-sitter-markdown~=0.5",
    "pathspec~=1.0",          # gitignore-compatible pattern matching
    "httpx~=0.28",            # async HTTP for TEI/API calls
    "tiktoken~=0.12",         # token counting for budget assembly
    "numpy~=2.4",             # vector operations
    "redis[hiredis]~=7.1",    # async Redis/Valkey client for event bus
    "watchfiles~=1.0",        # Rust-based filesystem watcher
    "python-dotenv~=1.1",     # Load .env files (API keys, ATLAS_* overrides)
    "tenacity~=9.1",
    "orjson>=3.10",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api~=1.33",
    "opentelemetry-sdk~=1.33",
    "opentelemetry-exporter-otlp-proto-grpc~=1.33",
    "opentelemetry-exporter-otlp-proto-http~=1.33",
]
typescript = ["tree-sitter-typescript~=0.23", "tree-sitter-javascript~=0.25"]
go = ["tree-sitter-go~=0.25"]
rust = ["tree-sitter-rust~=0.24"]
java = ["tree-sitter-java~=0.23"]
csharp = ["tree-sitter-c-sharp~=0.23"]
cpp = ["tree-sitter-c~=0.24", "tree-sitter-cpp~=0.23"]
ruby = ["tree-sitter-ruby~=0.23"]
php = ["tree-sitter-php~=0.24"]
all-languages = ["code-atlas-mcp[typescript,go,rust,java,csharp,cpp,ruby,php]"]

[project.scripts]
atlas = "code_atlas.cli:app"

[project.urls]
Homepage = "https://github.com/SerPeter/code-atlas"
Documentation = "https://github.com/SerPeter/code-atlas/tree/main/docs"
Repository = "https://github.com/SerPeter/code-atlas"
Issues = "https://github.com/SerPeter/code-atlas/issues"
Changelog = "https://github.com/SerPeter/code-atlas/blob/main/CHANGELOG.md"

# --------------------------------------------------------------------------- #
# Dev dependencies
# --------------------------------------------------------------------------- #
[dependency-groups]
dev = [
    "pytest~=9.0",
    "pytest-asyncio~=1.1",
    "pytest-cov~=7.0",
    "pytest-xdist~=3.8",
    "pre-commit~=4.5",
    "ruff~=0.15",
    "ty~=0.0.15",
    "psutil~=7.2",
    "testcontainers>=4.10",
]

# --------------------------------------------------------------------------- #
# Hatch
# --------------------------------------------------------------------------- #
[tool.hatch.build.targets.wheel]
packages = ["src/code_atlas"]

[tool.hatch.envs.default]
installer = "uv"

# --------------------------------------------------------------------------- #
# Pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: requires running Memgraph instance",
    "bench: performance benchmarks (deselect with '-m \"not bench\"')",
    "tei: requires TEI embeddings service",
]
filterwarnings = [
    # litellm uses deprecated asyncio.iscoroutinefunction (removed in 3.16)
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:litellm",
    # aiohttp cleanup_closed deprecation on Python 3.14+
    "ignore:enable_cleanup_closed ignored:DeprecationWarning:aiohttp",
]

# --------------------------------------------------------------------------- #
# ty (type checker)
# --------------------------------------------------------------------------- #
[tool.ty.environment]
python-version = "3.14"

[tool.ty.analysis]
# OTel packages are optional (`[otel]` extra) — not present in the base venv.
allowed-unresolved-imports = [
    "opentelemetry",
    "opentelemetry.*",
    "opentelemetry.*.*",
    "opentelemetry.*.*.*",
    "opentelemetry.*.*.*.*",
    "opentelemetry.*.*.*.*.*",
    # tree-sitter grammars are optional extras — may not be installed.
    "tree_sitter_c",
    "tree_sitter_cpp",
    "tree_sitter_c_sharp",
    "tree_sitter_go",
    "tree_sitter_java",
    "tree_sitter_javascript",
    "tree_sitter_php",
    "tree_sitter_ruby",
    "tree_sitter_rust",
    "tree_sitter_typescript",
]

# --------------------------------------------------------------------------- #
# Semantic Release
# --------------------------------------------------------------------------- #
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
allow_zero_version = true       # project is 0.x
major_on_zero = false            # breaking changes bump minor while 0.x
tag_format = "v{version}"       # matches existing v0.1.0, v0.1.1, v0.1.2

[tool.semantic_release.branches.main]
match = "^(main|master)$"
prerelease = false

[tool.semantic_release.branches.feature]
match = "^feature/.*$"
prerelease = true
prerelease_token = "dev"

[tool.semantic_release.changelog]
exclude_commit_patterns = ['chore\(release\):.*']

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = false     # include full details for first PSR-managed release
